# vvfOS

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md
src/: lib.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  grub.cfg  long_mode_init.asm  multiboot_header.asm
src/memory/: area_frame_allocator.rs  mod.rs
src/memory/paging/: entry.rs  table.rs
