[package]
name = "vvfos_os"
version = "0.0.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>", "Michael Schuller <chick@mschuller.net>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "0.1.4"
spin = "0.3.4"
bitflags = "0.7.0"

[dependencies.multiboot2]
git = "https://github.com/phil-opp/multiboot2-elf64"

# The development profile, used for `cargo build`.
[profile.dev]
panic = "abort"

# The release profile, used for `cargo build --release`.
[profile.release]
panic = "abort"